..F....... [ZBXNEXT-4374] implemented the widget configuration fields clearing when changing the type (ashubin)
A.F.I...S. [ZBXNEXT-4119] implemented tag based permissions (miks, Oleg, Sasha, Sergejs)
..F....... [ZBXNEXT-4045] implemented maximum size for graphs in widgets (gcalenko)
..F....... [ZBXNEXT-4340] added kiosk mode for dashboard (ashubin)

Bug fixes:
..F....... [ZBX-13506] fixed linked trigger is moved to sibling map element (agriscenko)
........S. [ZBX-13586] fixed trigger-based event correlation - suspend creation of event if no problems are recovered by it (viktors, wiper)
........S. [ZBX-13339] improved deallocation of memory (MVekslers)
..F....... [ZBX-13412] fixed JS error and wrong form behaviour when changing item type, type of information (agriscenko)
..F....... [ZBX-13471] fixed contrast in selected item filters (Andzs)
..F....... [ZBX-13428] fixed long name of map outside go back button in map widget (agriscenko, Sasha)
..F....... [ZBX-13340] fixed pie graphs displaying incorrect data (Ivo)
..F....... [ZBX-13257] fixed display of the latest item in Audit log (agriscenko)
..F....... [ZBX-13447] fixed trigger name readability on map in dark theme (nikita)
....I..... [ZBX-11994] changed "awk" to "sed" for getting info about "Last Changed Revision" (MVekslers)
..F....... [ZBX-13360] fixed HTML5 placeholder color that previously appeared like actual input data (nikita)
...G...PS. [ZBX-13351] improved OpenSSL error messages (viktors)
..F....... [ZBX-13147] fixed inconsistent number on map navigation tree (nikita)
..F....... [ZBX-13537] fixed "Inaccessible user" in Dashboard System status widgets acknowledgement popup (agriscenko)
....I..... [ZBX-13472] fixed description of "Server" and "ServerActive" configuration options (Sasha)
........S. [ZBX-13455] added frontend error message when templates cannot be linked to LLD host (viktors)
..F....... [ZBX-13538] fixed example configuration for Elasticsearch (nikita)